--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="utf-8">
     <title>Hello World Quiz</title>
 </head>
+<header>
+<h1 style="text-align: center">Hello World Quiz</h1>
+</header>
 
 <body>
-<div class="questions-page">
+<div class="questions-page" style="margin-left: 10%">
     <div>
-        <span class="question-current">0</span>/<span class="questions-total">0</span>
+        <span class="question-current">0</span>/<span class="questions-total">4</span>
     </div>
     <div class="question">
 
     </div>
-    <ul class="answers">
+    <ul class="answers" style="list-style-type: none">
     </ul>
 </div>
 
@@ -23,7 +26,6 @@
     </div>
     <button type="button" class="restart-button">Restart</button>
 </div>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="index.js"></script>
 
